[gd_scene load_steps=6 format=3 uid="uid://cbnl85dwqguyj"]

[ext_resource type="PackedScene" uid="uid://yf3klohcp811" path="res://scenes/forest.tscn" id="1_37u0m"]
[ext_resource type="Script" path="res://scenes/game.gd" id="1_bpmvj"]
[ext_resource type="PackedScene" uid="uid://d2hbv2aikypuk" path="res://scenes/pause_menu.tscn" id="2_wgcik"]
[ext_resource type="PackedScene" uid="uid://cip4fybw6r3dw" path="res://scenes/hud.tscn" id="4_660x3"]
[ext_resource type="PackedScene" uid="uid://bdqfe08ucfp4v" path="res://scenes/alert.tscn" id="5_akkyo"]

[node name="GameManager" type="Node"]
process_mode = 3
script = ExtResource("1_bpmvj")

[node name="Forest" parent="." node_paths=PackedStringArray("game_manager") instance=ExtResource("1_37u0m")]
game_manager = NodePath("..")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HUD" parent="HUD" instance=ExtResource("4_660x3")]

[node name="AlertLayer" type="CanvasLayer" parent="."]

[node name="AlertMenu" parent="AlertLayer" node_paths=PackedStringArray("game_manager") instance=ExtResource("5_akkyo")]
game_manager = NodePath("../..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" node_paths=PackedStringArray("game_manager") instance=ExtResource("2_wgcik")]
game_manager = NodePath("../..")
